--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -27,21 +27,6 @@
     <url-pattern>/*</url-pattern>
   </filter-mapping> 
   
-  <!--  Checks that a user or device is accessing a subdomain which represents a campaign that actually exists --> 
-  <filter>
-    <filter-name>CampaignExistenceFilter</filter-name>
-    <filter-class>edu.ucla.cens.awserver.jee.filter.CampaignExistsFilter</filter-class>
-     <init-param>
-      <param-name>controllerName</param-name>
-      <param-value>campaignExistsController</param-value>
-    </init-param>
-  </filter>
-  
-  <filter-mapping>
-    <filter-name>CampaignExistenceFilter</filter-name>
-    <url-pattern>/app/*</url-pattern>
-  </filter-mapping>
-  
   <!--  Enforces UTF-8 character encoding on all requests. --> 
   <filter>
     <filter-name>Utf8RequestEncodingFilter</filter-name>
@@ -253,7 +238,7 @@
   </servlet-mapping>
   
   <welcome-file-list>
-    <welcome-file>index.html</welcome-file>
+    <welcome-file>/app/login.jsp</welcome-file>
   </welcome-file-list>
    
   <error-page>
