now uses campaignId instead of subdomain

--- a/usernames/add-remove-user.properties
+++ b/usernames/add-remove-user.properties
@@ -1,6 +1,6 @@
 userName=hail.dull
-password=abcdefgh
-subdomain=pilot
+password=abcd.efgh
+campaignId=1
 emailAddress=selsky@cens.ucla.edu
 json={first_name:Joshua,last_name:Selsky}
 dbUserName=andwellness
