--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -24,7 +24,7 @@
   </filter>
   <filter-mapping>
     <filter-name>Log4jNdcFilter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/app/*</url-pattern>
   </filter-mapping> 
   
   <!--  Enforces UTF-8 character encoding on all requests. --> 
@@ -35,7 +35,7 @@
   
   <filter-mapping>
     <filter-name>Utf8RequestEncodingFilter</filter-name>
-    <url-pattern>/*</url-pattern>
+    <url-pattern>/app/*</url-pattern>
   </filter-mapping>
  
   <!--  Handles redirect back to login for an unauthenticated user accessing content that requires stateful authentication -->
