--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -304,7 +304,7 @@
     <session-timeout>30</session-timeout>
   </session-config>
   
-  <!--  force site-wide SSL (for now) -->  
+  <!--  Turning off site-wide SSL because it causes problems with phones logging in over Edge    
   <security-constraint>
     <web-resource-collection>
       <web-resource-name>Restricted URLs</web-resource-name>
@@ -314,5 +314,6 @@
       <transport-guarantee>CONFIDENTIAL</transport-guarantee>
     </user-data-constraint>
   </security-constraint>
+  -->
   
 </web-app>
