--- a/build.xml
+++ b/build.xml
@@ -19,6 +19,7 @@
   	<include name="**/commons-pool-1.5.4.jar"/>
   	<include name="**/json-dot-org-2010-01-05.jar"/>
   	<include name="**/jbcrypt-0.3.jar"/>
+  	<include name="**/xom-1.2.6.jar"/>
   </fileset>
 
   <fileset id="run-dependencies" dir="${component.repository}">
@@ -31,6 +32,7 @@
   	<include name="**/jstl-1.2.jar"/>
   	<include name="**/json-dot-org-2010-01-05.jar"/>
   	<include name="**/jbcrypt-0.3.jar"/>
+  	<include name="**/xom-1.2.6.jar"/>
   </fileset>
 
   <path id="compile-classpath">
