--- a/build.xml
+++ b/build.xml
@@ -16,6 +16,8 @@
     <include name="**/spring-2.5.6-SEC01.jar"/>
   	<include name="**/commons-logging-1.1.1.jar"/>
   	<include name="**/commons-dbcp-1.2.2.jar"/>
+    <include name="**/commons-io-1.3.2.jar"/>
+  	<include name="**/commons-fileupload-1.2.2.jar"/>
   	<include name="**/commons-pool-1.5.4.jar"/>
   	<include name="**/json-dot-org-2010-01-05.jar"/>
   	<include name="**/jbcrypt-0.3.jar"/>
@@ -28,6 +30,8 @@
     <include name="**/commons-logging-1.1.1.jar"/>
   	<include name="**/mysql-connector-java-5.1.10-bin.jar"/>
   	<include name="**/commons-dbcp-1.2.2.jar"/>
+    <include name="**/commons-io-1.3.2.jar"/>
+    <include name="**/commons-fileupload-1.2.2.jar"/>
   	<include name="**/commons-pool-1.5.4.jar"/>
   	<include name="**/jstl-1.2.jar"/>
   	<include name="**/json-dot-org-2010-01-05.jar"/>
