--- a/web/WEB-INF/web.xml
+++ b/web/WEB-INF/web.xml
@@ -536,14 +536,21 @@
     <param-value>/WEB-INF/spring/*.xml</param-value>
   </context-param>
 
+  <!-- The order of the following listener components is important - ContextLoaderListener must be last. -->
+  
   <!-- Bootstrap listener to initialize Log4J.  Having this one here (before Spring is bootstrapped with its ContextLoaderListener)
        ensures Log4J is configured before Spring spits out logging messages. -->
   <listener>
     <listener-class>org.springframework.web.util.Log4jConfigListener</listener-class>
   </listener>
 
+  <!-- Provide temp directory cleanip and ensure that the cleanup process terminates gracefully on app termination -->
+  <listener>
+    <listener-class>org.apache.commons.fileupload.servlet.FileCleanerCleanup</listener-class>
+  </listener>
+
   <!-- Bootstrap listener to start up Spring's root WebApplicationContext. Should be after the Log4jConfigListener if such is
-       used. -->
+       used. --> 
   <listener>
     <listener-class>org.springframework.web.context.ContextLoaderListener</listener-class>
   </listener>
